--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea/
 /.idea/
 .idea/workspace.xml
 .idea/workspace.xml
@@ -8,3 +7,4 @@
 .idea/workspace.xml
 .idea/workspace.xml
 .idea/workspace.xml
+/.idea/
