--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>JTattoo</artifactId>
             <version>1.6.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.soundlibs</groupId>
+            <artifactId>mp3spi</artifactId>
+            <version>1.9.5.4</version>
+        </dependency>
+
 
     </dependencies>
 
